#618 Added moral day 4 tests